# rust-finance-eng-playground

./: Cargo.toml  README.md
front-end/: package-lock.json
src/: api_helpers.rs  main.rs  stock_metadata.rs
