[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = {version = "1.0", features = ["derive"]}
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.68"
tokio = {version = "1.0", features = ["full"]}
reqwest = { version = "0.11.22", features = ["json"] }
futures = "0.3.30"